# dotfiles

./: .chezmoi.toml.tmpl  .chezmoiignore  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  MISSION.md  NOTES.md  README.md  RESOURCES.md  dot_gitconfig.tmpl  dot_tmux.conf  flake.nix  home.nix  run_once_install-packages.sh.tmpl  skillset.yaml
.claude/: settings.json
.claude-plugin/: marketplace.json
.pi/: settings.json
tools/sandbox-broker/: Cargo.toml
tools/sandbox-broker/adapter/: claude-code-hook.sh  codex-hook.sh
tools/sandbox-broker/designs/: package-lock.json  package.json  render-diagrams.mjs
tools/sandbox-broker/designs/001-permission-broker/: README.md  architecture.md  audit.md  hooks.md  lifecycle.md  matcher.md  phases.md  policy.md  templates.md  testing.md  verdict-flow.md
tools/sandbox-broker/designs/001-permission-broker/diagrams/: component-map.mmd  hook-adapter.mmd  layer-positioning.mmd  lifecycle-state.mmd  matcher.mmd  phases.mmd  verdict-flow.mmd
tools/sandbox-broker/designs/001-permission-broker/refs/: agent-infra.md  codex.md  daytona.md  e2b.md  fence.md  landrun.md  sandbox-runtime.md  synthesis.md  windmill.md
tools/sandbox-broker/examples/: policy.toml
tools/sandbox-broker/src/: broker.rs  learning.rs  lib.rs  main.rs  matcher.rs  operation.rs  persist.rs  policy.rs  server.rs  session.rs  subagent.rs  verdict.rs  worktree.rs
tools/sandbox-broker/tests/: codex_adapter_test.rs  codex_contract_test.rs  contract_test.rs  e2e.rs  hook_test.rs  integration.rs
(+451 files in other folders)
